AP-18468: Avoid unnecessary DataColumnMetaDataManager creation
AP-18468 (Avoid creation of empty DataColumnMetaDataManagers)